# SSHub

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  openwiki-update.yml  release.yml  strix-pentest.yml
assets/: os_logos.json  os_logos_large.json  sshub.desktop
demo/: .gitignore  play.sh  record.sh  seed-demo.sh  seed_demo.rs  sftp-server.sh
demo/home/: ssh_config
demo/tapes/: add-host.tape  connect.tape  hero.tape  navigate.tape  overview.tape  screenshots.tape  sftp.tape
docs/: host-sync-design.md  implementation-flow.md  termius-export-format.md
docs/superpowers/specs/: 2026-07-10-multi-group-favorites.md  (+3 more)
man/: sshub.1
openwiki/: .last-update.json  INSTRUCTIONS.md  index.md  quickstart.md
openwiki/architecture/: data-model.md  index.md  overview.md  source-map.md
openwiki/data-models/: storage.md
openwiki/domain/: hosts-identities.md  index.md
openwiki/integrations/: external-terminals.md  import-export.md  index.md  session-logging.md
openwiki/operations/: build-release.md  build-test-release.md  ci-cd.md  config.md  index.md  runbook.md  testing.md
openwiki/security/: index.md  secrets.md
openwiki/testing/: index.md  strategy.md
openwiki/tui/: keybindings.md  rendering.md
openwiki/workflows/: cli.md  connecting.md  index.md  sessions-sftp.md  sftp.md  tui.md  tunnels.md
scripts/: README.md  gen_os_logos.py
src/: app.rs  config.rs  credentials.rs  keybinds.rs  lib.rs  main.rs  ping.rs  search.rs  secure_fs.rs  session_log.rs  session_transport.rs  text_input.rs  tunnel.rs  watcher.rs
src/app/: adhoc.rs  audit.rs  broadcast.rs  connect.rs  copyid.rs  field_picker.rs  groups.rs  host_crud.rs  host_detail.rs  host_form.rs  hostlist.rs  identities.rs  import.rs  keygen.rs  keys.rs  local_shell.rs  mod.rs  mouse.rs  push_key.rs  session.rs  session_spawn.rs  sftp.rs  tags.rs  tests.rs  tunnels.rs  types.rs  util.rs
src/broadcast/: mod.rs
src/cli/: audit.rs  completions.rs  context.rs  filter.rs  group.rs  help.rs  host.rs  identity.rs  inventory.rs  mod.rs  output.rs  parse.rs  sftp.rs  tunnel.rs
src/hosts/: crud.rs  loader.rs  mod.rs
src/import/: mod.rs  mremoteng.rs  putty.rs  termius_csv.rs
src/launcher/: custom.rs  ghostty.rs  kitty.rs  mod.rs  trait.rs
src/metadata/: db.rs  mod.rs
src/osinfo/: detect.rs  logos.rs  mod.rs  parse.rs  widget.rs
src/session/: askpass.rs  connect.rs  keys.rs  mod.rs  parser.rs  pty.rs  render.rs
src/sftp/: mod.rs  model.rs  transport.rs  worker.rs
src/ssh/: agent.rs  export.rs  host.rs  import.rs  keyfile.rs  keygen.rs  mod.rs  probe.rs  resolver.rs
src/store/: hosts.rs  identities.rs  migrate.rs  mod.rs  tunnels.rs  types.rs
src/tui/: animation.rs  dashboard_layout.rs  layout.rs  mod.rs  text.rs  theme.rs  tween.rs
src/tunnel/: audit.rs  mod.rs  spawn.rs
tests/e2e/: adhoc_connect.rs  broadcast.rs  config_reload.rs  connect_managed.rs  copy_id.rs  first_run.rs  group_crud.rs  host_crud.rs  host_detail.rs  host_sort.rs  hybrid_compat.rs  import_export.rs  keychain.rs  keygen.rs  local_shell.rs  metadata_persist.rs  mod.rs  quick_connect.rs  search_and_navigate.rs  ssh_config_sync.rs  termius_import.rs  tunnel_form.rs
tests/fixtures/: config.toml  ssh_config
tests/smoke/: binary_starts.rs  cli_commands.rs  config_load.rs  resolver.rs  run_app_quit.rs
tests/support/: fixture_resolver.rs  mock_launcher.rs  mod.rs
(+52 files in other folders)
