[package]
name = "sshub"
version = "0.1.0"
edition = "2021"
description = "SSHub — TUI launcher for SSH hosts"
license = "MIT"
repository = "https://github.com/Petyok/SSHub"
readme = "README.md"
keywords = ["ssh", "tui", "terminal", "launcher"]
categories = ["command-line-utilities"]

[[bin]]
name = "sshub"
path = "src/main.rs"

[lib]
name = "sshub"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
crossterm = "0.28"
keyring = "3"
libc = "0.2"
notify = "7"
nucleo = "0.3"
portable-pty = "0.9"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tui-term = "0.2"
vt100 = "0.15"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"

[[test]]
name = "smoke"
path = "tests/smoke/binary_starts.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[[test]]
name = "config_load"
path = "tests/smoke/config_load.rs"

# vt100 0.15.2 panics in `Grid::visible_rows` when scrollback_offset exceeds
# the screen height. Upstream fixed it in 0.16 but ratatui 0.29 pins
# unicode-width to =0.2.0 while vt100 0.16 needs ^0.2.1, so we can't bump.
# Vendor 0.15.2 with the 2-line saturating-fix backported. See
# vendor/vt100/src/grid.rs for the patch.
[patch.crates-io]
vt100 = { path = "vendor/vt100" }
