[package]
name = "sshub"
version = "0.5.2"
edition = "2021"
description = "SSHub — TUI launcher for SSH hosts"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Petyok/SSHub"
readme = "README.md"
keywords = ["ssh", "tui", "terminal", "launcher"]
categories = ["command-line-utilities"]
# Keep the published crate lean and installable: drop the heavy demo media
# (README GIFs/screenshots render from GitHub, not the crate) and CI config.
exclude = [
    "demo/gifs",
    "demo/screenshots",
    "demo/tapes",
    "demo/home",
    "demo/bin",
    "demo/play.sh",
    ".github",
]

[[bin]]
name = "sshub"
path = "src/main.rs"

# A dev/demo fixture seeder — an example (not a bin) so `cargo install sshub`
# only installs the `sshub` binary, never this helper.
[[example]]
name = "seed-demo"
path = "demo/seed_demo.rs"

[lib]
name = "sshub"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
crossterm = "0.29"
# Enable real OS backends. Without a backend feature, keyring 3.x silently
# falls back to an in-memory mock store: set()/get() work within one process
# (so a write+read-back check passes) but nothing persists across restarts —
# which looks exactly like "passwords aren't being saved". The secret-service
# features are Linux/BSD-only and compile to no-ops elsewhere.
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }
libc = "0.2"
notify = "7"
nucleo = "0.3"
portable-pty = "0.9"
ratatui = "0.30"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
tui-term = "0.3"
vt100 = "0.16"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"

[[test]]
name = "smoke"
path = "tests/smoke/binary_starts.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[[test]]
name = "config_load"
path = "tests/smoke/config_load.rs"
